--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,8 +1,10 @@
-    <!-- Javascript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!-- custom js -->
-    <script type="text/javascript" src="{{site.baseurl}}/assets/js/main.js"></script> 
-    {% if site.analytics %}
-        {% include analytics.html %}
-    {% endif %}
+<!-- Javascript -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+<!-- custom js -->
+<script type="text/javascript" src="{{site.baseurl}}/assets/js/main.js"></script>
+{% if site.analytics %}
+{% include analytics.html %}
+{% endif %}
