--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,13 +1,13 @@
 <div class="education-container container-block">
   <h2 class="container-block-title">Education</h2>
   <div class="item">
-    <h4 class="degree">MSc in Computer Science</h4>
-    <h5 class="meta">University of London</h5>
-    <div class="time">2011 - 2012</div>
+    <h4 class="degree">MS in Computer Science</h4>
+    <h5 class="meta">University of Georgia</h5>
+    <div class="time">2015 - 2018</div>
   </div><!--//item-->
   <div class="item">
-    <h4 class="degree">BSc in Applied Mathematics</h4>
-    <h5 class="meta">Bristol University</h5>
-    <div class="time">2007 - 2011</div>
+    <h4 class="degree">BS in Computer Science</h4>
+    <h5 class="meta">Georgia Southern University</h5>
+    <div class="time">2010 - 2015</div>
   </div><!--//item-->
 </div><!--//education-container-->
