--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,21 +4,12 @@
     <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur
       adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
   </div><!--//intro-->
-  <div class="item">
-    <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span>
 
-  </div><!--//item-->
+  {% for project in site.projects %}
   <div class="item">
-    <span class="project-title"><a href="#" target="_blank">DevStudio</a></span> -
-    <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span>
+    <span class="project-title"><a href={{project.link}}>{{project.name}}</a></span> -
+    <span class="project-tagline">{{project.description}}</span>
   </div><!--//item-->
-  <div class="item">
-    <span class="project-title"><a href="#" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span>
-  </div><!--//item-->
-  <div class="item">
-    <span class="project-title"><a href="#" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span>
-  </div><!--//item-->
-  <div class="item">
-    <span class="project-title"><a href="#" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span>
-  </div><!--//item-->
+  {% endfor %}
+
 </section><!--//section-->
