--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,8 +1,8 @@
 <section class="section projects-section">
   <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
   <div class="intro">
-    <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur
-      adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu
+      lectus.</p>
   </div><!--//intro-->
 
   {% for project in site.projects %}
