remove full url from sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,12 +31,12 @@
 
       {% if site.linkedin %}
       <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://in.linkedin.com/in/{{site.linkedin}}"
-                                                            target="_blank">linkedin.com/in/{{site.linkedin}}</a></li>
+                                                            target="_blank">{{site.linkedin}}</a></li>
       {% else %}
       {% endif %}
 
       {% if site.github %}
-      <li class="github"><i class="fa fa-github"></i><a href="http://github.com/{{site.github}}" target="_blank">github.com/{{site.github}}</a>
+      <li class="github"><i class="fa fa-github"></i><a href="http://github.com/{{site.github}}" target="_blank">{{site.github}}</a>
       </li>
       {% else %}
       {% endif %}
