building pdf from site but bad formating

--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,6 +1,6 @@
 <section class="section summary-section">
   <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
-  <div class="summary">
+  <div id="summary" class="summary">
     <p>{{site.about}}</p>
   </div><!--//summary-->
 </section><!--//section-->
