--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,3 @@
 <footer class="footer">
-  <div class="text-center">
-  </div><!--//container-->
+  <a href="javascript:demoFromHTML()" class="button">Run Code</a>
 </footer><!--//footer-->
