--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,4 +1,4 @@
-<div class="interests-container container-block">
+<div id="interests" class="interests-container container-block">
   <h2 class="container-block-title">Interests</h2>
   <ul class="list-unstyled interests-list">
     {% for interest in site.interests %}
