--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 
 
 <div class="sidebar-wrapper">
-  <div class="profile-container">
+  <div id="sidbar-head" class="profile-container">
     <img class="profile-img"
          src="{{site.baseurl}}/assets/img/{% if site.pic %}{{ site.pic }}{% else %}profile.png{% endif %}"
          alt="profile picture"/>
