--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -5,8 +5,10 @@
     {% for skill in site.skills %}
     <div class="item">
       <h3 class="level-title">{{skill.name}}</h3>
-      <div class="level-bar">
-        <div class="level-bar-inner" data-level={{skill.level}}>
+      <div class="progress">
+        <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45"
+             aria-valuemin="0" aria-valuemax="100" style="width: {{skill.level}}">
+          <span class="sr-only">45% Complete</span>
         </div>
       </div>
     </div>
